Fixed: Header not showing Merge branch 'master' of https://github.com/kevin-shin/Visa-vis
# Conflicts:
#	src/app/App.css
#	src/app/taskCard/styles.css
#	src/app/timeline/styles.css

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,15 +1,13 @@
 .body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100vw;
-    margin: 0;
-    padding: 0;
-    background: #f1f1f1;
-    overflow: auto;
-    font-family: Helvetica;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+  background: #f1f1f1;
+  overflow: auto;
+  font-family: Helvetica, serif;
 }
 
 * {
@@ -17,25 +15,22 @@
 }
 
 .header {
-    width: 100%;
-    flex: 0 1 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 3em;
-    font-family: Helvetica;
-    color: white;
-    background-color: #25274D;
-    height: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 3em;
+  color: white;
+  background-color: #25274D;
+  min-height: 100px;
 }
 
 .main {
-  flex: 1 1;
+  padding: 50px;
+  margin: 0 auto;
   display: flex;
   flex-direction: row-reverse;
   justify-content: center;
   align-items: stretch;
   width: 80%;
-  margin: 100px;
-  height: 90%;
+  max-height: 80%;
 }
