--- a/src/app/tasksList/styles.css
+++ b/src/app/tasksList/styles.css
@@ -28,7 +28,7 @@
 
 .task-item {
   display: flex;
-  flex: row;
+  flex-direction: row;
   justify-content: space-between;
 }
 
